versions/26.1.2/translated/ru_ru/develop/events.md
---
title: События
description: Руководство по использование событий предоставляемых Fabric API.
authors:
  - daomephsta
  - dicedpixels
  - draylar
  - jamieswhiteshirt
  - Jimmy474
  - Juuxel
  - liach
  - mkpoli
  - natanfudge
  - PhoenixVX
  - solidblock
  - YanisBft
authors-nogithub:
  - stormyfabric
---

Fabric API предоставляет систему, которая позволяет модам реагировать на действия или явления, так же известные как _события_, происходящие в игре.

События — это хуки, которые удовлетворяют общим сценариям использования и/или обеспечивают улучшенную совместимость и производительность между модами, которые подключаются к одним и тем же областям кода. Использование событий часто заменяет использование mixins.

API Fabric предоставляет события для важных областей кодовой базы Minecraft, в которых могут быть заинтересованы многие разработчики модов.

События представлены экземплярами `net.fabricmc.fabric.api.event.Event`, которые хранят и вызывают _обртный вызов (callback)_. Часто для обратного вызова существует один экземпляр события, который хранится в статическом поле `EVENT` интерфейса обратного вызова, но существуют и другие шаблоны. Например, `ClientTickEvents` группирует несколько связанных событий вместе.

## Обратные вызовы {#callbacks}

Обратный вызов — это фрагмент кода, который передается в качестве аргумента событию. Когда игра инициирует событие, переданный фрагмент кода будет выполнен.

### Интерфейсы обратных вызовов {#callback-interfaces}

Каждое событие имеет соответствующий интерфейс обратного вызова. Обратные вызовы регистрируются путем вызова метода `register()` для экземпляра события с экземпляром интерфейса обратного вызова в качестве аргумента.

## Прослушивание событий {#listening-to-events}

В этом примере регистрируется `AttackBlockCallback` для нанесения урона игроку при столкновении с блоками, из которых не выпадает предмет при ручной добыче.

<<< @/reference/26.1.2/src/main/java/com/example/docs/event/ExampleModEvents.java#attack_block_callback_event

### Добавление предмета к существующим таблицам лута {#adding-items-to-existing-loot-tables}

Иногда вам может понадобиться добавить предметы в таблицы добычи. Например, добавляя свои капли в ванильный блок или сущность.

Самое простое решение — замена файла таблицы добычи — это может сломать другие моды. А что, если они захотят изменить и их? Мы рассмотрим, как можно добавлять предметы в таблицы добычи, не переопределяя таблицу.

Мы добавим особый элемент в таблицу лута угольной руды.

#### Прослушивание загрузки таблицы добычи {#listening-to-loot-table-loading}

В API Fabric есть событие, которое запускается при загрузке таблиц добычи, `LootTableEvents.MODIFY`. Вы можете зарегистрировать обратный вызов для него в вашем [инициализаторе мода](./getting-started/project-structure#entrypoints). Давайте также проверим, что текущая таблица добычи — это таблица добычи угольной руды:

<<< @/reference/26.1.2/src/main/java/com/example/docs/event/ExampleModEvents.java#loot_table_events

#### Добавление предметов в таблицу добычи {#adding-items-to-the-loot-table}

Чтобы добавить предмет, нам нужно добавить пул с записью предмета в таблицу добычи.

Мы можем создать пул с помощью `LootPool#lootPool` и добавить его в таблицу добычи.

В нашем пуле пока нет элементов, поэтому мы создадим запись элемента с помощью `LootItem#lootTableItem` и добавим ее в пул.

<<< @/reference/26.1.2/src/main/java/com/example/docs/event/ExampleModEvents.java#loot_pool_builder{5-7}

## Собственные события {#custom-events}

В некоторых областях игры отсутствуют хуки, предоставляемые API Fabric, поэтому вы можете либо использовать mixin, либо создать собственное событие.

Мы рассмотрим создание события, которое запускается при стрижке овец. Процесс создания события:

- Создание интерфейса обратного вызова события
- Запуск события из mixin
- Создание тестовой реализации

### Создание интерфейса обратного вызова {#creating-the-event-callback-interface}

Интерфейс обратного вызова описывает, что должно быть реализовано слушателем событий, которые будут прослушивать ваше событие. Интерфейс обратного вызова также описывает, как событие будет вызываться из нашего mixin. Традиционно, объект `Event` помещают в качестве поля в интерфейс обратного вызова, который будет идентифицировать наше фактическое событие.

Для нашей реализации `Event` мы выберем использование события на основе массива. Массив будет содержать все слушатели событий, которые прослушивают событие.

Наша реализация будет вызывать слушатели событий по порядку до тех пор, пока один из них не вернет `InteractionResult.PASS`. Это означает, что слушатель событий может с помощью возвращаемого значения указать: «_отменить это_», «_одобрить это_» или «_не важно, передать следующему слушателю событий_».

Использование `InteractionResult` в качестве возвращаемого значения — это общепринятый способ заставить обработчики событий взаимодействовать таким образом.

Вам необходимо создать интерфейс, имеющий экземпляр «События» и метод для реализации ответа. Базовая настройка обратного вызова для стрижки овец выглядит следующим образом:

<<< @/reference/26.1.2/src/main/java/com/example/docs/event/SheepShearCallback.java#sheep_shear_callback

Давайте рассмотрим это более подробно. При вызове мы перебираем всех слушателей:

<<< @/reference/26.1.2/src/main/java/com/example/docs/event/SheepShearCallback.java#listener_iterator

Затем для каждого слушателя мы вызываем метод `interact`, чтобы получить его ответ. Вот сигнатура метода `interact`, который мы объявили в этом интерфейсе:

<<< @/reference/26.1.2/src/main/java/com/example/docs/event/SheepShearCallback.java#interact_method

Если слушатель сообщает, что необходимо прервать операцию (возвращая `FAIL`) или полностью завершить её (`SUCCESS`), обратный вызов возвращает результат и завершает цикл.

`InteractionResult.PASS` переходит к следующему слушателю, пока не будут вызваны все слушатели и в конце концов не будет возвращено значение `PASS`:

<<< @/reference/26.1.2/src/main/java/com/example/docs/event/SheepShearCallback.java#return_value

Мы можем добавить комментарии Javadoc в начало классов обратного вызова, чтобы документировать, что делает каждый `InteractionResult`. В нашем случае это может быть:

<<< @/reference/26.1.2/src/main/java/com/example/docs/event/SheepShearCallback.java#javadoc_comment

### Запуск события из Mixin'а {#triggering-the-event-from-a-mixin}

Теперь у нас есть базовый скелет события, но нам нужно его запустить. Поскольку мы хотим, чтобы событие вызывалось, когда игрок пытается постричь овцу, мы вызываем событие `invoker` в `Sheep#mobInteract`, когда вызывается `shear()` (т. е. овцу можно стричь, а игрок держит ножницы):

<<< @/reference/26.1.2/src/main/java/com/example/docs/mixin/event/SheepMixin.java#sheep_mixin

### Создание тестовой имплементации {#creating-a-test-implementation}

Теперь нам нужно протестировать наше событие. Вы можете зарегистрировать слушатель в своем методе инициализации (или в другой области, если вам так удобнее) и добавить туда пользовательскую логику.

Вот пример, в котором вместо шерсти к ногам овцы падает алмаз:

<<< @/reference/26.1.2/src/main/java/com/example/docs/event/ExampleModEvents.java#sheep_shear_callback_event

Если вы зайдете в игру и пострижете овцу, вместо шерсти должен выпасть алмаз.

<!-- TODO: maybe adding a video of a sheep dropping diamonds? -->
